--- a/server/public/register.html
+++ b/server/public/register.html
@@ -15,6 +15,9 @@
     <div>
       <input name="password" type="password" placeholder="password" />
     </div>
+    <div>
+      <input name="passwordRepeat" type="password" placeholder="repeat password" />
+    </div>
     <button>Register</button>
   </form>
 </body>
