--- a/server/public/login.html
+++ b/server/public/login.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <form action="/api/users/login" method="POST">
+  <form action="/api/users" method="POST">
     <h3>Log in</h3>
     <div>
       <input name="username" type="text" placeholder="username" />
@@ -17,5 +17,8 @@
     </div>
     <button>Login</button>
   </form>
+  <a href="/register">
+    Register
+  </a>
 </body>
 </html>
